[gd_scene load_steps=11 format=2]

[ext_resource path="res://Fonts/Consolas.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/trás.svg" type="Texture" id=2]
[ext_resource path="res://Scripts/options_panel.gd" type="Script" id=3]
[ext_resource path="res://Fonts/Roboto-Bold.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://Fonts/Roboto-Regular.ttf" type="DynamicFontData" id=5]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.176471, 0.176471, 0.176471, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=5]
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=4]
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:offset:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:offset:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( -576, -0.25, 0, 0, 325.832, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[node name="OptionsPanel" type="CanvasLayer"]
offset = Vector2( 0, -576 )
transform = Transform2D( 1, 0, 0, 1, 0, -576 )
script = ExtResource( 3 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -288.0
margin_right = 512.0
margin_bottom = 288.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 556.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/CenterContainer"]
margin_left = 341.0
margin_top = 14.0
margin_right = 642.0
margin_bottom = 522.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/CenterContainer/PanelContainer"]
margin_right = 301.0
margin_bottom = 508.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/CenterContainer/PanelContainer/MarginContainer2"]
margin_left = 20.0
margin_top = 20.0
margin_right = 281.0
margin_bottom = 488.0
custom_constants/separation = 10
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Label" parent="MarginContainer/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer"]
margin_right = 261.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "Menu"

[node name="Tam Texto" type="HBoxContainer" parent="MarginContainer/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer"]
margin_top = 48.0
margin_right = 261.0
margin_bottom = 67.0

[node name="Texto" type="Label" parent="MarginContainer/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/Tam Texto"]
margin_right = 134.0
margin_bottom = 19.0
custom_fonts/font = SubResource( 5 )
text = "Tamanho do texto:"

[node name="SliderText" type="HSlider" parent="MarginContainer/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/Tam Texto"]
margin_left = 138.0
margin_right = 238.0
margin_bottom = 16.0
rect_min_size = Vector2( 100, 0 )
min_value = 1.0
max_value = 2.0
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Audio" type="HBoxContainer" parent="MarginContainer/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer"]
margin_top = 77.0
margin_right = 261.0
margin_bottom = 117.0

[node name="Texto" type="Label" parent="MarginContainer/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/Audio"]
margin_top = 10.0
margin_right = 45.0
margin_bottom = 29.0
custom_fonts/font = SubResource( 5 )
text = "Áudio:"

[node name="ToggleAudio" type="CheckButton" parent="MarginContainer/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/Audio"]
margin_left = 49.0
margin_right = 125.0
margin_bottom = 40.0
pressed = true

[node name="Tubarao" type="Label" parent="MarginContainer/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer"]
margin_top = 127.0
margin_right = 261.0
margin_bottom = 284.0
custom_fonts/font = SubResource( 3 )
text = "            .                
            |\\               
.           | \\              
|\\       _-´   ¨¨¨-.         
\\ `---¨¨¨        o  `>       
 `>,-----_         ´´    ><> 
 |/       ¨¨¨¨|/¨¨´´         
 ´            ´              "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="MarginContainer/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer"]
margin_top = 294.0
margin_right = 261.0
margin_bottom = 335.0
custom_fonts/font = SubResource( 5 )
text = "Este jogo está no github: github.com/Gustavo-Rubo/Rotas"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="MarginContainer/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer"]
margin_top = 345.0
margin_right = 261.0
margin_bottom = 408.0
custom_fonts/font = SubResource( 5 )
text = "Se você quiser apoiar o projeto, pode fazer uma doação via paypal para: gustavo.rubo@hotmail.com"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="MarginContainer/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer"]
margin_top = 418.0
margin_right = 261.0
margin_bottom = 468.0
rect_min_size = Vector2( 50, 50 )
texture_normal = ExtResource( 2 )
expand = true
stretch_mode = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/slide_in_options = SubResource( 4 )
[connection signal="value_changed" from="MarginContainer/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/Tam Texto/SliderText" to="." method="_on_HSlider_value_changed"]
[connection signal="toggled" from="MarginContainer/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/Audio/ToggleAudio" to="." method="_on_HSlider_toggled"]
[connection signal="pressed" from="MarginContainer/CenterContainer/PanelContainer/MarginContainer2/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
